--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -191,7 +191,7 @@
      * base font size: 18px 
      * vertical space unit : 32px
      */
-    --base-size: 62.5%;
+    --base-size: 75%;
     --base-font-size: 1.8rem;
     --space: 3.2rem;
 
@@ -267,7 +267,7 @@
     /* widths for rows and containers
      */
     --width-full    : 100%;
-    --width-max     : 1080px;
+    --width-max     : 1800px;
     --width-wide    : 1400px;
     --width-wider   : 1600px;
     --width-widest  : 1800px;
@@ -3788,8 +3788,8 @@ input[type="button"].btn--primary:focus {
 }
 
 .s-about__pic {
-    width: var(--vspace-5);
-    height: var(--vspace-5);
+    width: var(--vspace-5)*5;
+    height: var(--vspace-5)*5;
     border: 1.6rem solid rgba(255, 255, 255, 0.02);
     border-radius: 50%;
 }
