--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1871,6 +1871,12 @@ hr.fancy::before {
     letter-spacing: .3em;
 }
 
+/* Gonna make my custom color text for use in <p> block lol */
+colortext {
+    color: var(--color-2);
+}
+
+
 /* ------------------------------------------------------------------- 
  * ## Lists
  * ------------------------------------------------------------------- */
@@ -3939,7 +3945,7 @@ input[type="button"].btn--primary:focus {
 
 #portfolio .portfolio-figure img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
   display: block;
   transform: scale(1.00);
@@ -4024,8 +4030,8 @@ input[type="button"].btn--primary:focus {
   appearance: none;
   border: 0;
   border-radius: 999px;
-  padding: 10px 16px;
-  font-size: .95rem;
+  padding: 10px 4px;
+  font-size: .25rem;
   cursor: pointer;
   transition: transform .15s ease, box-shadow .2s ease, background-color .2s ease;
   box-shadow: 0 2px 10px rgba(0,0,0,.06);
