--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4162,7 +4162,11 @@ input[type="button"].btn--primary:focus {
 .s-resume__section p {
     margin-top: var(--vspace-0_25);
     margin-bottom: var(--vspace-0_25);
-    line-height: 1.180;
+    line-height: 1.250;
+}
+
+.s-resume__section ul {
+    line-height: 1.400;
 }
 
 
