--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4031,7 +4031,7 @@ input[type="button"].btn--primary:focus {
   border: 0;
   border-radius: 999px;
   padding: 10px 4px;
-  font-size: .25rem;
+  font-size: 1rem;
   cursor: pointer;
   transition: transform .15s ease, box-shadow .2s ease, background-color .2s ease;
   box-shadow: 0 2px 10px rgba(0,0,0,.06);
